--- a/TwitterTagSearches/app/build.gradle
+++ b/TwitterTagSearches/app/build.gradle
@@ -15,12 +15,10 @@ android {
         versionCode 1
         versionName "1.0"
     }
-    buildTypes {
-        release {
-            runProguard false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
+//    buildTypes {
+//        {
+//        }
+//    }
 }
 
 dependencies {
